--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vrtest-dev",
+  "name": "vrtest",
   "version": "0.2.0",
   "private": true,
   "keywords": [],
@@ -78,6 +78,7 @@
     "proxyquire": "^1.7.11",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.6",
+    "vrtest-dev": "swapkats/vrtest",
     "webfontloader": "^1.6.27",
     "webpack": "2.2.0",
     "webpack-dev-server": "2.2.0"
